@@ -20,4 +20,20 @@ Feature %|Addition
       t | n         | n*2       | n*3      | Fixnum   | t
     end
   end
+  
+  ScenarioOutline "Add two numbers" do
+    Given "I have entered <input_1> into the calculator"
+    And "I have entered <input_2> into the calculator"
+    When "I add"
+    Then "the result should be <output> on the screen"
+    And "the result class should be <class>"
+  end
+  
+  TableExamples do |t|
+    t | "input_1" | "input_2" | "output" | "class"  | t
+    10.times do |n|
+      t | n         | n*2       | n*3      | Fixnum   | t
+    end
+  end
+  
 end
